--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@mui/icons-material": "^5.14.19",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
